syntax = "proto3";

package voice.gateway.v1;

option go_package = "github.com/eleven-am/voice-backend/internal/gateway/proto;gatewaypb";

service VoiceGateway {
  rpc Session(stream ClientMessage) returns (stream ServerMessage);
}

message ClientMessage {
  string request_id = 1;
  int64 timestamp = 2;
  map<string, string> metadata = 3;

  oneof payload {
    SessionStart session_start = 4;
    Utterance utterance = 5;
    SessionEnd session_end = 6;
  }
}

message SessionStart {
  string user_id = 1;
  string room_id = 2;
}

message Utterance {
  string text = 1;
  bool is_final = 2;
  string agent_id = 3;
  string session_id = 4;
}

message SessionEnd {}

message ServerMessage {
  string request_id = 1;
  int64 timestamp = 2;
  map<string, string> metadata = 3;

  oneof payload {
    SessionConfig session_config = 4;
    Response response = 5;
    AgentStatusUpdate agent_status = 6;
    Error error = 7;
  }
}

message SessionConfig {
  repeated Agent agents = 1;
}

message Agent {
  string id = 1;
  string name = 2;
  string description = 3;
  bool online = 4;
  repeated string capabilities = 5;
}

message Response {
  string text = 1;
  string from_agent = 2;
}

message AgentStatusUpdate {
  string agent_id = 1;
  bool online = 2;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_AGENT_UNAVAILABLE = 1;
  ERROR_CODE_AGENT_TIMEOUT = 2;
  ERROR_CODE_INVALID_REQUEST = 3;
  ERROR_CODE_INTERNAL = 4;
  ERROR_CODE_UNAUTHORIZED = 5;
}
